--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
+            "css": [
+                "assets/css/popup.css"
+            ],
             "js": ["content.js"]
         }
     ],
@@ -21,5 +24,14 @@
     "background": {
         "service_worker": "background.js",
         "type": "module"
-    }
+    },
+    "web_accessible_resources": [
+        {
+            "resources": [
+                "assets/fonts/vazir.ttf",
+                "assets/css/font.css"
+            ],
+            "matches": ["<all_urls>"]
+        }
+    ]
 }
