--- a/manifest.json
+++ b/manifest.json
@@ -9,9 +9,6 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "css": [
-                "assets/css/popup.css"
-            ],
             "js": ["content.js"]
         }
     ],
@@ -29,6 +26,7 @@
         {
             "resources": [
                 "assets/fonts/vazir.ttf",
+                "assets/css/popup.css",
                 "assets/css/font.css"
             ],
             "matches": ["<all_urls>"]
